# robot-navigation-mppi

./: LICENSE  README.md
RobotNavigation10x/: CMakeLists.txt  package.xml
RobotNavigation10x/config/: mppi_params.yaml  tracker_params.yaml
RobotNavigation10x/include/RobotNavigation10x/: controller.hpp  mppi_controller.hpp  path_smoother.hpp  trajectory_generator.hpp  types.hpp
RobotNavigation10x/launch/: run_mppi.launch.py  run_tracker.launch.py  sim.launch.py
RobotNavigation10x/src/: controller.cpp  mppi_controller.cpp  mppi_tracker_node.cpp  original_waypoints.csv  path_smoother.cpp  plot_path.py  smooth_path.csv  trajectory.csv  trajectory_generator.cpp  trajectory_tracker_node.cpp
RobotNavigation10x/worlds/: nav_world.world  nav_world_obst.world
turtlebot3_simulations/turtlebot3_gazebo/launch/: empty_world.launch.py
